--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* Basic Styling */
 body {
   font-family: sans-serif;
   margin: 0;
@@ -24,26 +25,6 @@ section {
   padding: 20px;
 }
 
-.skills ul {
-  list-style: none;
-  padding: 0;
-}
-
-.img-contact{
-  display: block;
-  width: 150px;
-  height: 150px;
-}
-
-ul li{
-  width: 150px;
-  height: 150px;
-}
-
-.skills li {
-  margin-bottom: 10px;
-}
-
 footer {
   background-color: #333; /* Example color */
   color: white;
@@ -51,37 +32,20 @@ footer {
   padding: 20px;
 }
 
-footer ul {
-  list-style: none;
-  padding: 0;
+/* Navigation Styles */
+nav a {
+  /*... styles for navigation links... */
 }
 
-footer li {
-  margin-bottom: 10px;
-}
-
-footer a {
-  color: white;
-  text-decoration: none;
-}
-video{
-width: 100%;
-height: 95%;
-
-
-
-
+/* Skills Section Styles */
+.skills ul {
+  /*... styles for the skills list... */
 }
 img{
+width: 300px; ;
 
-width: 20%;
 
 }
-
-/* Media Query for Smaller Screens (e.g., Phones) */
-@media (max-width: 600px) {
-  nav a {
-    display: block; /* Stack navigation links */
-    margin-bottom: 10px;
-  }
+.a1{
+  width: 60px;
 }
